Fix docs overflow issue

--- a/docs/src/components/application/application.component.scss
+++ b/docs/src/components/application/application.component.scss
@@ -5,12 +5,8 @@ application {
   width: 100%;
 
   > main {
-    height: 100%;
-    overflow: hidden;
-
-    > [ui-view] {
-      height: 100%;
-      overflow: hidden;
-    }
+    flex-grow: 1;
+    overflow: auto;
+    position: relative;
   }
 }
