--- a/docs/src/components/components/components.component.scss
+++ b/docs/src/components/components/components.component.scss
@@ -1,11 +1,19 @@
 components {
+  bottom: 0;
   display: flex;
   flex-flow: row nowrap;
-  height: 100%;
-  width: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  > ias-side-nav {
+    flex: none;
+  }
 
   > [ui-view] {
-    flex: 1 1;
+    flex-grow: 1;
+    height: 100%;
     overflow: auto;
   }
 }
